@@ -1,6 +1,10 @@
 package edu.ptithcm.network.service;
 
+import edu.ptithcm.cache.Cache;
+import edu.ptithcm.model.Peer;
+import edu.ptithcm.network.packet.payload.DiscoveryPayload;
 import edu.ptithcm.network.packet.NetworkPacket;
+import edu.ptithcm.service.SyncService;
 import edu.ptithcm.util.JsonUtils;
 import org.tinylog.Logger;
 
@@ -8,13 +12,10 @@ import java.io.IOException;
 import java.net.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 
 public class DiscoveryService {
-    @FunctionalInterface
-    public static interface PacketHandler {
-        void handlePacket(DatagramPacket packet);
-    }
-
     private final InetAddress bindIp;
     private final int unicastPort;
     private final int multicastPort;
@@ -24,25 +25,34 @@ public class DiscoveryService {
     private MulticastSocket multicastSocket;
     private volatile boolean running;
 
-    private ExecutorService executor;
+    private ExecutorService virtualExecutorService;
+    private ScheduledExecutorService scheduledExecutorService;
 
-    private final PacketHandler unicastPacketHandler;
-    private final PacketHandler multicastPacketHandler;
-
-    public DiscoveryService(int unicastPort, int multicastPort, InetAddress multicastGroup, InetAddress bindIp, PacketHandler unicastPacketHandler, PacketHandler multicastPacketHandler) {
+    public DiscoveryService(
+            int unicastPort,
+            int multicastPort,
+            InetAddress multicastGroup,
+            InetAddress bindIp) {
         this.unicastPort = unicastPort;
         this.multicastPort = multicastPort;
         this.multicastGroup = multicastGroup;
-        this.bindIp = bindIp; // IP LAN mà người dùng chọn ở LoginView
-        this.unicastPacketHandler = unicastPacketHandler;
-        this.multicastPacketHandler = multicastPacketHandler;
+        this.bindIp = bindIp;
         this.running = false;
     }
 
     public void start() {
         if (running) return;
         running = true;
-        executor = Executors.newVirtualThreadPerTaskExecutor();
+        virtualExecutorService = Executors.newVirtualThreadPerTaskExecutor();
+        scheduledExecutorService = Executors.newScheduledThreadPool(
+                1,
+                r -> {
+                    Thread t = new Thread(r);
+                    t.setDaemon(true);
+                    return t;
+                }
+                );
+        scheduledExecutorService.scheduleWithFixedDelay(this::sendDiscoverMulticast, 0, 5, TimeUnit.SECONDS);
 
         try {
             // 1. Unicast Socket
@@ -63,11 +73,10 @@ public class DiscoveryService {
             }
 
             // 3. Start listening
-            executor.execute(this::listenUnicast);
-            executor.execute(this::listenMulticast);
+            virtualExecutorService.execute(this::listenUnicast);
+            virtualExecutorService.execute(this::listenMulticast);
 
         } catch (IOException e) {
-//            e.printStackTrace();
             Logger.error(e);
             stop();
         }
@@ -75,6 +84,12 @@ public class DiscoveryService {
 
     public void stop() {
         running = false;
+
+        // stop send discover multicast
+        this.scheduledExecutorService.shutdownNow();
+
+        // stop listening
+        this.virtualExecutorService.shutdownNow();
 
         // Đóng Unicast
         if (unicastSocket != null && !unicastSocket.isClosed()) {
@@ -91,15 +106,10 @@ public class DiscoveryService {
                 }
                 multicastSocket.close();
             } catch (IOException e) {
-//                e.printStackTrace();
                 Logger.error(e);
             }
         }
-
-        if (executor != null) {
-            executor.close();
-        }
-        Logger.info("Discovery Service stopped");
+        Logger.info("Discovery Service stopped.");
     }
 
     public void listenUnicast() {
@@ -108,13 +118,9 @@ public class DiscoveryService {
             try {
                 DatagramPacket packet = new DatagramPacket(buffer, buffer.length);
                 unicastSocket.receive(packet);
-                if (unicastPacketHandler != null) {
-                    unicastPacketHandler.handlePacket(packet);
-                }
-            } catch (IOException e) {
-                // Socket closed, exit loop
+                this.handleDiscoveryPacket(packet, false);
+            } catch (Exception e) {
                 if (running)
-//                    e.printStackTrace();
                     Logger.error(e);
             }
         }
@@ -126,13 +132,9 @@ public class DiscoveryService {
             try {
                 DatagramPacket packet = new DatagramPacket(buffer, buffer.length);
                 multicastSocket.receive(packet);
-                if (multicastPacketHandler != null) {
-                    multicastPacketHandler.handlePacket(packet);
-                }
-            } catch (IOException e) {
-                // Socket closed, exit loop
+                this.handleDiscoveryPacket(packet, true);
+            } catch (Exception e) {
                 if (running)
-//                    e.printStackTrace();
                     Logger.error(e);
             }
         }
@@ -148,32 +150,88 @@ public class DiscoveryService {
         multicastSocket.send(packet);
     }
 
-//    static void main() throws IOException, InterruptedException {
-//        DiscoveryService discoveryService = new DiscoveryService(
-//                9999,
-//                9998,
-//                InetAddress.getByName("230.0.0.1"),
-//                InetAddress.getByName("192.168.65.1"),
-//                (packet -> {
-//                    IO.println("Get packet unicast from" + packet.getSocketAddress());
-//                    IO.println(JsonUtils.toJson(NetworkPacket.fromDatagramPacket(packet)));
-//                }),
-//                (packet -> {
-//                    IO.println("Get packet multicast from" + packet.getSocketAddress());
-//                    IO.println(JsonUtils.toJson(NetworkPacket.fromDatagramPacket(packet)));
-//                })
-//        );
-//        discoveryService.start();
-//
-//        while(true){
-//            NetworkPacket np = new NetworkPacket(
-//                    NetworkPacket.PacketType.DISCOVER,
-//                    "sender id",
-//                    "pay load", "sig"
-//            );
-//            discoveryService.sendMulticast(np.toBytes());
-//            discoveryService.sendUnicast(np.toBytes(), InetAddress.getByName("192.168.65.1"), 9999);
-//            Thread.sleep(3000);
-//        }
-//    }
+    private void sendDiscoverMulticast(){
+        try{
+            Peer myPeer = Cache.getInstance().getMyPeer();
+            if(myPeer == null)
+                return;
+            DiscoveryPayload discoveryPayload = new DiscoveryPayload(myPeer);
+            discoveryPayload.sign(Cache.getInstance().getCredential().getPrivateKey());
+            String payload = JsonUtils.toJson(discoveryPayload);
+            NetworkPacket networkPacket = new NetworkPacket(NetworkPacket.PacketType.DISCOVER, payload);
+            this.sendMulticast(networkPacket.toBytes());
+        }catch (Exception e){
+            Logger.error(e);
+        }
+    }
+
+    private void handleDiscoveryPacket(DatagramPacket packet, boolean isMulticast){
+        NetworkPacket networkPacket = NetworkPacket.fromDatagramPacket(packet);
+        if(networkPacket.getPacketType() != NetworkPacket.PacketType.DISCOVER){
+            Logger.warn("Get NetworkPacket from " + packet.getSocketAddress()  + " but is not type DISCOVER ignore this packet");
+            return;
+        }
+
+        DiscoveryPayload discoveryPayload = networkPacket.getPayloadAs(DiscoveryPayload.class);
+
+        // check self-broadcast
+        if(discoveryPayload.getPeer().getId().equals(Cache.getInstance().getCredential().getId())){
+            return;
+        }
+
+        //verify
+        boolean checkSignature = discoveryPayload.verify(discoveryPayload.getPeer().getPublicKey());
+        boolean checkTimestamp = (System.currentTimeMillis() - discoveryPayload.getTimestamp() < 10000);
+        if (!(checkSignature && checkTimestamp)){
+            Logger.warn(
+                String.format(
+                    "Discovery packet(from %s) verify failed: %s",
+                    (isMulticast?"multicast":"unicast"),
+                    (!checkSignature)?"Signature verify failed":"timestamp too old (< 10 seconds from now)"
+                )
+            );
+            return;
+        }
+
+        boolean peerExisting = Cache.getInstance().getPeer(discoveryPayload.getPeer().getId()) != null;
+        if(peerExisting){
+            Peer peer = Cache.getInstance().getPeer(discoveryPayload.getPeer().getId());
+            // check info change
+            if(!peer.getIp().equals(discoveryPayload.getPeer().getIp()))
+                peer.setIp(discoveryPayload.getPeer().getIp());
+            if(peer.getPort() != discoveryPayload.getPeer().getPort())
+                peer.setPort(discoveryPayload.getPeer().getPort());
+            if(!peer.getName().equals(discoveryPayload.getPeer().getName()))
+                peer.setName(discoveryPayload.getPeer().getName());
+        }else{
+            Peer newPeer = discoveryPayload.getPeer();
+            Cache.getInstance().addPeer(newPeer);
+            Logger.debug(String.format(
+                    "Discovery Service(%s) found new Peer:\n\tid: %s\n\tname: %s\n\tip: %s\n\tport: %d\n\t",
+                    (isMulticast?"multicast":"unicast"),
+                    newPeer.getId(),
+                    newPeer.getName(),
+                    newPeer.getIp().toString(),
+                    newPeer.getPort()
+            ));
+            SyncService.requestSyncMetadata(newPeer);
+        }
+
+        // received from multicast -> send reply
+        if(isMulticast){
+            try{
+                Peer myPeer = Cache.getInstance().getMyPeer();
+                if(myPeer == null)
+                    return;
+
+                DiscoveryPayload discoveryPayloadReply = new DiscoveryPayload(myPeer);
+                discoveryPayloadReply.sign(Cache.getInstance().getCredential().getPrivateKey());
+                String payload = JsonUtils.toJson(discoveryPayloadReply);
+                NetworkPacket replyDiscovery = new NetworkPacket(NetworkPacket.PacketType.DISCOVER, payload);
+                this.sendUnicast(replyDiscovery.toBytes(), discoveryPayload.getPeer().getIp(), this.unicastPort);
+            }catch (IOException e){
+                Logger.error(e);
+            }
+        }
+    }
 }
